Fix buggy nav bar dropdown on mobile
There was a remnant of the desktop version's dropdown box that stayed
when rendering on mobile, it has been fixed.

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -23,6 +23,15 @@ body {
   padding: 9px 0;
 }
 
+// Gets rid of the out-of-place white triangle that showed up on mobile devices
+// on the navigation bar dropdown.
+@media (max-width: 979px) {
+  .nav-collapse .dropdown-menu:before,
+  .nav-collapse .dropdown-menu:after {
+    display: none !important;
+  }
+}
+
 /** Typography **/
 
 h1 {
